--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+  *= require animate.css
  *= require bootstrap-material-design
  *= require font-awesome
  */
