--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,3 +5,76 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+html, body {
+	background-color: #fff !important;
+}
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+	font-family: "ROBOTO" !important;
+}
+
+.navbar-default.navbar.main-navbar {
+    background-color: #ddd !important;
+    color: #333333 !important;
+    border-bottom: 1px solid #c7c7c7;
+}
+.side-bar {
+	background-color: #ddd;
+	border-right: 1px solid #c7c7c7;
+	padding: 0;
+	position: fixed;
+	float: left;
+}
+.navbar {
+	margin-bottom: 0px;
+}
+.nav > li > a {
+	padding: 15px 15px;
+}
+.navbar .navbar-nav > li > a {
+    font-size: 15px;
+    font-weight: 600;
+}
+.alert-alert {
+	background-color: rgb(163, 16, 19) !important;
+}
+.alert-notice {
+	background-color: #4CAF50 !important;
+}
+.alert {
+	box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22);
+}
+.alert-box {
+    position: absolute;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    z-index: 99;
+}
+.wrapper {
+	padding: 15px 0;
+}
+.row.billing-addr {
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    padding: 15px 0px;
+    margin-bottom: 15px;
+    h4 {
+    	font-size: 17px;
+    	color: #009688;
+    	font-weight: 600;
+    }
+}
+.sidebar-nav {
+    li {
+        a {
+            font-size: 15px;
+            text-transform: uppercase;
+            font-weight: 600;
+            color: #505050;
+        }
+    }
+}
