--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -115,27 +115,7 @@
                  </div>
              </div>
          </div>
-         <div class="row">
-             <div class="form-group col-md-4 plans-input-block">
-                 <div class="plans" >
-                     <%= f.label :net_plan ,'Plans'%>
-                     <%= f.text_field :net_plan, class: "form-control", :readonly => true %>
-                 </div>
-                 <ul class="plan-list" id="plan-list">
-                     <li>599 / 10Mbps / 20GB / 512Kbps</li>
-                     <li>649 / 2Mbps / 50GB / 512Kbps</li>
-                     <li>699 / 50Mbps / 20GB / 512Kbps</li>
-                     <li>777 / 5Mbps / 75GB / 512Kbps</li>
-                     <li>999 / 20Mbps / 30GB / 512Kbps</li>
-                     <li>1045 / 50Mbps / 50GB / 512Kbps</li>
-                     <li>1399 / 20Mbps / 100GB / 512Kbps</li>
-                     <li>700 / 1Mbps / Unlimited</li>
-                     <li>1200 / 2Mbps / Unlimited</li>
-                     <li>2200 / 4Mbps / Unlimited</li>
-                 </ul>
-
-             </div>
-         </div>
+         
          <div class="row billing-addr">
              <div class="form-group col-md-4">
                  <%=f.label :address_proof, 'Proof of address' %>
@@ -266,6 +246,27 @@
                         <small id="validate">If any other, please mention here.</small>
                     </div>       
                  </div>
+
+             </div>
+         </div>
+         <div class="row">
+             <div class="form-group col-md-4 plans-input-block">
+                 <div class="plans" >
+                     <%= f.label :net_plan ,'Plans'%>
+                     <%= f.text_field :net_plan, class: "form-control", :readonly => true %>
+                 </div>
+                 <ul class="plan-list" id="plan-list">
+                     <li value="599">599 / 10Mbps / 20GB / 512Kbps</li>
+                     <li>649 / 2Mbps / 50GB / 512Kbps</li>
+                     <li>699 / 50Mbps / 20GB / 512Kbps</li>
+                     <li>777 / 5Mbps / 75GB / 512Kbps</li>
+                     <li>999 / 20Mbps / 30GB / 512Kbps</li>
+                     <li>1045 / 50Mbps / 50GB / 512Kbps</li>
+                     <li>1399 / 20Mbps / 100GB / 512Kbps</li>
+                     <li>700 / 1Mbps / Unlimited</li>
+                     <li>1200 / 2Mbps / Unlimited</li>
+                     <li>2200 / 4Mbps / Unlimited</li>
+                 </ul>
 
              </div>
          </div>
