Payment details completed

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -15,7 +15,7 @@
     <div class="col-md-8 col-lg-7">
         <h3><b><span class="glyphicon glyphicon-user"></span> New customer</b></h3>
         <hr/>
-        <%= form_for(@customer, html: {multipart: true}) do |f| %>
+        <%= form_for @customer do |f| %>
          <div class="row">
              <div class="form-group col-md-3">
                 <%= f.label :date ,'Date'%>
@@ -257,41 +257,83 @@
                  </div>
                  <ul class="plan-list" id="plan-list">
                      <li value="599">599 / 10Mbps / 20GB / 512Kbps</li>
-                     <li>649 / 2Mbps / 50GB / 512Kbps</li>
-                     <li>699 / 50Mbps / 20GB / 512Kbps</li>
-                     <li>777 / 5Mbps / 75GB / 512Kbps</li>
-                     <li>999 / 20Mbps / 30GB / 512Kbps</li>
-                     <li>1045 / 50Mbps / 50GB / 512Kbps</li>
-                     <li>1399 / 20Mbps / 100GB / 512Kbps</li>
-                     <li>700 / 1Mbps / Unlimited</li>
-                     <li>1200 / 2Mbps / Unlimited</li>
-                     <li>2200 / 4Mbps / Unlimited</li>
+                     <li value="649">649 / 2Mbps / 50GB / 512Kbps</li>
+                     <li value="699">699 / 50Mbps / 20GB / 512Kbps</li>
+                     <li value="777">777 / 5Mbps / 75GB / 512Kbps</li>
+                     <li value="999">999 / 20Mbps / 30GB / 512Kbps</li>
+                     <li value="1045">1045 / 50Mbps / 50GB / 512Kbps</li>
+                     <li value="1399">1399 / 20Mbps / 100GB / 512Kbps</li>
+                     <li value="700">700 / 1Mbps / Unlimited</li>
+                     <li value="1200">1200 / 2Mbps / Unlimited</li>
+                     <li value="2200">2200 / 4Mbps / Unlimited</li>
                  </ul>
 
              </div>
          </div>
-         <div class="row billing-addr">
-            <%= f.fields_for :payment_details do |payment| %>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <%= payment.label :plan_cost, "Plan Cost" %>
-                        <%= payment.text_field :plan_cost, class: "form-control", placeholder: "Enter plan cost" %>
+         
+            <%= f.fields_for :payment_detail do |payment| %>
+                <div class="row billing-addr">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <%= payment.label :plan_cost, "Plan Cost" %>
+                            <%= payment.text_field :plan_cost, class: "form-control", placeholder: "Enter plan cost" , :readonly => true %>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <%= payment.label :plan_tax, "Plan tax" %>
+                            <%= payment.text_field :plan_tax, class: "form-control", placeholder: "Enter plan tax", :readonly => true %>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <%= payment.label :monthly_payment_cost, "Monthly plan cost" %>
+                            <%= payment.text_field :monthly_payment_cost, class: "form-control", placeholder: "Enter monthly payment cost", readonly: "true" %>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <%= payment.label :plan_tax, "Plan tax" %>
-                        <%= payment.text_field :plan_tax, class: "form-control", placeholder: "Enter plan tax" %>
+                <div class="row billing-addr">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <%= payment.label :no_of_months_paid, "No of months paid" %>
+                            <%= payment.text_field :no_of_months_paid, class: "form-control", placeholder: "No of months paid" %>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <%= payment.label :installation_charge, "Installation charge" %>
+                            <%= payment.text_field :plan_tax, class: "form-control", placeholder: "Enter installation charge" %>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <%= payment.label :company_material_use, "Others" %>
+                            <%= payment.text_field :company_material_use, class: "form-control", placeholder: "Enter others" %>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <%= payment.label :company_material_cost, "Others charge" %>
+                            <%= payment.text_field :company_material_cost, class: "form-control", placeholder: "Enter others charge" %>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <%= payment.label :monthly_payment_cost, "Monthly plan cost" %>
-                        <%= payment.text_field :monthly_payment_cost, class: "form-control", placeholder: "Enter monthly payment cost" %>
+                <div class="row billing-addr">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= payment.label :total_amount, "Total amount" %>
+                            <%= payment.text_field :total_amount, class: "form-control", placeholder: "Total amount" %>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= payment.label :pending_amount, "Pending amount" %>
+                            <%= payment.text_field :pending_amount, class: "form-control", placeholder: "Pending amount" %>
+                        </div>
                     </div>
                 </div>
+
             <% end %>     
-         </div>
          <div class="row">
              <div class="form-group">
                  <%= f.submit class: "btn btn-raised btn-primary" %>
