--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,7 +2,7 @@
     <h1><span class="glyphicon glyphicon-th-list"></span> List of customers</h1>
     <hr/>
     
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default customer-navbar">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to '<span class="glyphicon glyphicon-th-list"></span> List'.html_safe, customers_path %></li>
@@ -13,8 +13,8 @@
     </nav>
 
 
-    <div class="table-responsive">
-      <table class="table table-striped table-responsive">
+     <div class="table-responsive resp-table">
+      <table class="table table-striped customer-list-table">
         <thead>
           <tr>
             <th>User Id</th>
@@ -23,11 +23,11 @@
             <th>Mobile no</th>
             <th>Email</th>
             <th>Telephone no</th>
-            <th>Date of Birth</th>
-            <th>Billing address</th>
-            <th>Pin no</th>
             <th>Nationality</th>
             <th>Plan</th>
+            <th>Total amount</th>
+            <th>Pending amount</th>
+            <th>action</th>
           </tr>
         </thead>
         <tbody>
@@ -39,12 +39,16 @@
               <td><%= customer.mobile_no %></td>
               <td><%= customer.email %></td>
               <td><%= customer.telephone_no %></td>
-              <td><%= customer.date_of_birth %></td>
-              <td><%= truncate(customer.billing_address, length:50) %></td>
-              <td><%= customer.pin_no %></td>
               <td><%= customer.nationality %></td>
               <td><%= customer.net_plan %></td>
-              <td><%=link_to 'See details', customer_path(customer) %></td>
+              <td><%= customer.payment_detail.total_amount %></td>
+              <% customer.bill_books.each do |bill| %>
+                <% if bill == customer.bill_books.last%>
+                  <td><%= bill.pending_bill.to_i%></td>
+                <% end %>
+              <% end %>
+              
+              <td><%=link_to 'See details', customer_path(customer), class: "btn btn-sm btn-success cust-see-detail-btn" %></td>
             </tr>
           <% end %>
         </tbody>
