--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,13 +13,14 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 }
 
 .navbar-default.navbar.main-navbar {
-    background-color: #ddd !important;
-    color: #333333 !important;
-    border-bottom: 1px solid #c7c7c7;
+    background-color: #f8f8f8;
+        // border-color: #e7e7e7;
+    color: #e74c3c !important;
+    border-bottom: 1px solid #e7e7e7;
 }
 .side-bar {
-	background-color: #ddd;
-	border-right: 1px solid #c7c7c7;
+	background-color: #f8f8f8;
+	border-right: 1px solid #e7e7e7;
 	padding: 0;
 	position: fixed;
 	float: left;
@@ -52,6 +53,11 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 }
 .wrapper {
 	padding: 15px 0;
+    h1 {
+        color: #e74c3c;
+        margin: 0;
+        font-size: 22px;
+    }
 }
 .row.billing-addr {
     background-color: #f5f5f5;
@@ -64,7 +70,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
     margin-bottom: 15px;
     h4 {
     	font-size: 17px;
-    	color: #009688;
+    	color: #337ab7;
     	font-weight: 600;
     }
 }
@@ -72,9 +78,10 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
     li {
         a {
             font-size: 15px;
-            text-transform: uppercase;
+            // text-transform: uppercase;
             font-weight: 600;
-            color: #505050;
+            color: #337ab7;
+            border-bottom: 1px solid #e7e7e7;
         }
     }
 }
@@ -102,4 +109,56 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 }
 #validate {
     color: red;
+}
+.navbar.customer-navbar {
+    background-color: #e74c3c !important;
+}
+.cust-see-detail-btn {
+    background-color: #7f8c8d !important;
+    padding: 5px 10px !important;
+    margin: 0 !important;
+}
+.customer_table {
+    width: 100%;
+    height: 399px;
+    overflow: scroll;
+}
+.customer-list-table {
+    overflow: scroll;
+    min-width: 1500px;
+
+    tr {
+        th {
+            // width: 100%;
+        }
+        td {
+            width: auto;
+        }
+    }
+}
+
+.resp-table::-webkit-scrollbar {
+    width: 1em;
+    height: 8px;
+}
+ 
+.resp-table::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+ 
+.resp-table::-webkit-scrollbar-thumb {
+  background: #e74c3c;
+  background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+  outline: 1px solid #7582DA;
+  height: 5px;
+  border-radius: 10px;
+}
+.resp-table {
+    background: #fff;
+    padding: 10px;
+    height: 399px;
+}
+#total-amount-div {
+    display: none;
 }
