--- a/app/views/layouts/_customerdashbordnavbar.html.erb
+++ b/app/views/layouts/_customerdashbordnavbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse customer-navbar">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to '<span class="glyphicon glyphicon-th-list"></span> List'.html_safe, customers_path %></li>
