--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,14 @@
 	<div class="container-fluid">
 
 		<div class="row">
-			<div class="col-lg-1 col-md-3 side-bar">
+			<div class="col-lg-2 side-bar">
 				<ul class="nav sidebar-nav">
-				  <li class="active"><%=link_to 'Customers', customers_path %></li>
+				  <li class="active"><%=link_to '<i class="fa fa-users" aria-hidden="true"></i> Customers'.html_safe, customers_path %></li>
 				  <li><a href="#">Users</a></li>
 				  <li><a href="#">Page 2</a></li> 
 				</ul>
 			</div>
-			<div class="col-lg-11 col-md-9 side-bar-contet" style="float:right">
+			<div class="col-sm-11 col-lg-10 col-md-10 side-bar-contet" style="float:right">
 				
 				<%= yield %>
 		  	</div>
